--- a/cooking-book/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/cooking-book/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -4,22 +4,27 @@
       <div class="row">
         <div class="col-sm-5 form-group">
           <label for="name">Name</label>
-          <input type="text" id="name" class="form-control" />
+          <input type="text" id="name" class="form-control" #nameInput />
         </div>
         <div class="col-sm-2 form-group">
           <label for="amount">Amount</label>
-          <input type="text" id="amount" class="form-control" />
+          <input type="text" id="amount" class="form-control" #amountInput />
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12 align-content-centered">
-          <button class="btn btn-success" style="margin: 0px 5px" type="submit">
+          <button
+            class="btn btn-success"
+            style="margin: 0px 5px"
+            type="submit"
+            (click)="onAddItem()"
+          >
             Add
           </button>
-          <button class="btn btn-danger" style="margin: 0px 5px" type="button">
+          <button class="btn btn-danger" style="margin: 0px 5px" type="submit">
             Delete
           </button>
-          <button class="btn btn-primary" style="margin: 0px 5px" type="button">
+          <button class="btn btn-primary" style="margin: 0px 5px" type="submit">
             Clear
           </button>
         </div>
