--- a/directives_first/src/app/app.component.html
+++ b/directives_first/src/app/app.component.html
@@ -32,6 +32,8 @@
           </li>
         </div>
       </ul>
+      <p appBasicHighlight>Style me with basic Directive!</p>
+      <p appBetterHighlight>Style me with better Directive!</p>
     </div>
   </div>
 </div>
