--- a/routing-start/src/app/servers/servers.component.html
+++ b/routing-start/src/app/servers/servers.component.html
@@ -1,7 +1,12 @@
 <div class="row">
   <div class="col-xs-12 col-sm-4">
     <div class="list-group">
-      <a href="#" class="list-group-item" *ngFor="let server of servers">
+      <a
+        href="#"
+        class="list-group-item"
+        [routerLink]="['/servers', 2, 'edit']"
+        *ngFor="let server of servers"
+      >
         {{ server.name }}
       </a>
     </div>
